# 4isfstools_ONNX

./: .gitignore  ANCHOR_2026-05-12.md  ANCHOR_2026-05-13.md  CLAUDE.md  DEVELOPMENT_ANCHORS.md  HANDOFF.md  HANDOVER.md  HQ_MODEL_STATUS.md  PLATFORM_MAINTENANCE.md  PROGRESS.md  README.md  REFACTOR_PHASE1_SUMMARY.md  SPEC.md  WINDOWS_AGENT_HANDOFF.md  WINDOWS_FIX_LOG.md  WINDOWS_VOCAL_SEPARATION_GOLDEN_BASELINE.md  index.html  onnxruntime_profile__2026-05-21_01-21-50.json  package-lock.json  package.json  runtime-manifest.json  runtime-manifest.json.bak  vite.config.ts
.github/workflows/: publish-v1.0.yml
docs/: BASELINE_CURRENT.md  CHANGELOG_2026-05-21.md
docs/archive/: HANDOFF.md  MACOS_FROZEN_2026-05-14.md
scripts/: build-from-nas.ps1  build-windows-portable.ps1  bundle-python.sh  run-isolated-dev.mjs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/python_workers/: demucs_worker.py
src-tauri/src/: events.rs  lib.rs  lib.rs.bak  main.rs  models.rs  online_import.rs  process_control.rs  separation_queue.rs
src-tauri/src/runtime/: capability.rs  manifest.rs  mod.rs  python.rs
src-tauri/src/separation/: audio_io.rs  dsp.rs  engine.rs  legacy_demucs.rs  mod.rs  model_registry.rs  onnx_engine.rs
src-tauri/src/storage/: mod.rs
src/components/: ImportView.tsx  Player.tsx  Playlist.tsx  VocalWaveformPreview.tsx  icons.tsx
src/components/lyrics/: LyricsPanel.tsx
src/types/: index.ts  lyrics.ts
src/utils/: lyrics.ts
